# xmlcompare

./: # xml compare.md  .coverage  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Copilot-Processing.md  FEATURES.md  GITHUB_ISSUE_ADVANCED_FEATURES.md  LICENSE  PERFORMANCE.md  PLUGINS.md  README.md  SECURITY.md  config.json.example  config.schema.json  plan-advancedXmlcompareFeatures.prompt.md  run-linters.bat  run-linters.ps1  run-linters.sh  test_complex1.xml  test_complex2.xml  test_depth1.xml  test_depth2.xml  test_struct1.xml  test_struct2.xml  test_unordered1.xml  test_unordered2.xml  xmlcompare.py
.agent_work/: DEEP_ANALYSIS_2026-04-04.md  FEATURE_ROADMAP_DETAILED.md  QUICK_SUMMARY.md  deep_analysis_2025.md
docs/: CONFIG_GUIDE.md  FEATURES.md  TROUBLESHOOTING.md
java/: README.md  build.bat  build.gradle  build.ps1  build.sh  checkstyle.xml  fatjar.bat  fatjar.ps1  fatjar.sh  pom.xml  run.bat  run.ps1  (+2 more)
python/: README.md  api_server.py  benchmark.py  build.bat  build.ps1  build.sh  cache.py  format_html_sidebyside.py  format_unified_diff.py  interactive_cli.py  interactive_cli_enhanced.py  parallel.py  parse_streaming.py  plugin_interface.py  pyproject.toml  requirements.txt  ruff.toml  run.bat  run.ps1  run.sh  schema_analyzer.py  validate_xsd.py  wheel.bat  wheel.ps1  wheel.sh  xmlcompare.py
python/docs/: CLI_REFERENCE.md  FEATURES.md
python/samples/: orders_expected.xml  readings_a.xml
python/tests/: test_coverage_boost.py  test_features_v2.py  test_new_features.py  test_phase1_features.py  test_xmlcompare.py  test_xsd_validation.py
(+35 files in other folders)
