[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xmlcompare"
version = "1.0.0"
description = "XML file comparison tool"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
xmlcompare = "xmlcompare:main"

[tool.setuptools]
py-modules = ["xmlcompare", "plugin_interface", "schema_analyzer", "validate_xsd"]
